fixed homepage url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <div id="box">
     <div id="title">
       <img src="images/logo.png" alt="Sinatra-REST logo" />
-      <a href="/" alt="Sinatra-REST Home">{{ page.title }}</a>
+      <a href="http://blindgaenger.github.com/sinatra-rest/" alt="Sinatra-REST Home">{{ page.title }}</a>
     </div>
     <div id="content">
     {{ content }}
