--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     {{ content }}
     </div>
   </div>
-  <div id="footer">updated at {{ page.date }} by {{ page.author }}</div>
+  <div id="footer">updated on {{ page.date }} by {{ page.author }}</div>
   <a href="{{ page.homepage }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
 </body>
 </html>
