--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <meta name="description" content="{{ page.subtitle }}" />
   <title>{{ page.title }} &mdash; {{ page.author }}</title>
   <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" media="screen, projection" />
+  <link href="/favicon.ico" rel="shortcut icon" />
 </head>
 <body>
   <div id="box">
