--- a/_includes/screen.css
+++ b/_includes/screen.css
@@ -1,4 +1,8 @@
 
+{{ page.layout }}
+{{ page.author }}
+{{ page.subtitle }}
+
 html, body {
   background-color: #333333;
   font-family: 'lucida grande','lucida sans unicade',sans-serif;
@@ -21,7 +25,7 @@ html, body {
   font-family: 'georgia','bitstream vera serif',serif;
   font-weight: bold;
   margin: 0.1em 0;
-  color: #4D1818;
+  color: {{ page.foreground }};
 }
 
 #title {
@@ -29,7 +33,7 @@ html, body {
 }
 
 #title a, #title a:hover {
-  color: #4D1818;
+  color: {{ page.foreground }};
   text-decoration: none;    
 }
 
@@ -55,7 +59,7 @@ html, body {
 
 pre {
   font-family: "lucida console","monaco","andale mono","bitstream vera sans mono","consolas",monospace;
-  background: #e8ddda none repeat scroll 0 0;
+  background: {{ page.background }} none repeat scroll 0 0;
   border: 1px solid #af776c;
   color: #222222;
   font-size: 1.0em;
@@ -67,7 +71,7 @@ pre code {
 }
 
 p code {
-  background: #e8ddda none repeat scroll 0 0;
+  background: {{ page.background }} none repeat scroll 0 0;
   border: 1px solid #af776c;
   padding: 0.2em;
   font-size: 90%;
@@ -91,7 +95,7 @@ table {
   border-collapse: collapse;
 }
 th {
-  background-color: #e8ddda;
+  background-color: {{ page.background }};
 }
 td {
   border-top: 1px solid #af776c;
