--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
   <meta name="description" content="{{ page.subtitle }}" />
   <title>{{ page.title }} &mdash; {{ page.author }}</title>
   <link href="/favicon.ico" rel="shortcut icon" />
+  
+  <link rel="stylesheet" href="stylesheets/syntax.css" type="text/css" media="screen, projection" />
   <style type="text/css">
   {% include screen.css %}
   </style>
